--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ xmlhttp.onreadystatechange=function()
     document.getElementById("myDiv").innerHTML=xmlhttp.responseText;
     }
   }
-xmlhttp.open("GET","/demo_get.asp",true);
+xmlhttp.open("GET","demo_get.asp",true);
 xmlhttp.send();
 }
 </script>
