--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <script src="js/js.js"></script>
     <script src="js/zepto.min.js"></script>
     <script src="js/wxsdk.js"></script>
-    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script>
         (function () {
             window.wxShare && window.wxShare({
                 title: "这里有份突破挑战书，你接吗？",
                 desc: "世界那么大，等你去看看，现在就出发吧！",
-                linkurl: "http://static.hzboc.com/web/shanghou_20190409/",//地址
-                img: "http://static.hzboc.com/web/shanghou_20190409/share.jpg?v=1"//图片地址
+                linkurl: "https://uploadphotos.github.io/challengeBook/",//地址
+                img: "https://uploadphotos.github.io/challengeBook/image/share.jpg?v=1"//图片地址
             });
         })();
 
@@ -33,7 +33,7 @@
 data-content-height="1334" data-multi-fingered="2" data-show-fps="false" data-show-log="false" data-show-fps-style="x:0,y:0,size:12,textColor:0xffffff,bgAlpha:0.9">
 </div>
 <div id="vd" class="vd hide">
-    <video id="myVideo" class="myVideo" src="http://static.hzboc.com/video/aozan_20190404.mp4?v=12" preload="auto" x5-video-player-type="h5"
+    <video id="myVideo" class="myVideo" src="https://uploadphotos.github.io/challengeBook/media/aozan_20190404.mp4?v=12" preload="auto" x5-video-player-type="h5"
         x-webkit-airplay="true" webkit-playsinline="true" playsinline="true"></video>
 </div>
 <img id="bg" class="bg hide" src="" />
